--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -78,6 +78,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
         <TextView
+            android:id="@+id/version"
             android:text="V1.0.0"
             android:padding="10dp"
             android:textSize="15dp"
