--- a/app/src/main/res/layout/firstfragment_item1.xml
+++ b/app/src/main/res/layout/firstfragment_item1.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rootview"
     android:layout_width="match_parent"
-    android:layout_height="254dp">
+    android:layout_height="264dp">
 
     <ImageView
         android:id="@+id/backgroundImage"
@@ -13,6 +13,7 @@
 
     <android.support.v7.widget.CardView
         android:orientation="vertical"
+        android:layout_marginBottom="10dp"
         android:layout_gravity="bottom|center_horizontal"
         android:layout_width="314dp"
         android:layout_height="80dp">
